--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "react-async-status",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple React hook for managing the status of an async action and an associated message",
   "main": "dist/index.js",
   "umd:main": "dist/index.umd.js",
   "module": "dist/index.m.js",
   "source": "src/index.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/chrishutchinson/react-async-status",
   "author": "Chris Hutchinson <chris_hutchinson@me.com>",
   "license": "MIT",
   "scripts": {
     "test": "jest --coverage",
-    "bundle": "microbundle"
+    "bundle": "microbundle",
+    "publish": "npm publish . --access=public"
   },
   "dependencies": {
     "react": "^16.8.6"
