--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --coverage",
+    "test:ci": "jest --ci --runInBand --reporters=default --reporters=jest-junit",
     "bundle": "microbundle",
     "publish": "npm publish . --access=public"
   },
@@ -23,6 +24,7 @@
     "@types/node": "^12.0.1",
     "@types/react": "^16.8.17",
     "jest": "^24.8.0",
+    "jest-junit": "^6.4.0",
     "microbundle": "^0.11.0",
     "react-hooks-testing-library": "^0.5.0",
     "react-test-renderer": "^16.8.6",
