More test config tweaks

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,5 +31,6 @@ jobs:
       - run:
           name: Run tests
           command: yarn test:ci
-          environment:
-            JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
+
+      - store_test_results:
+          path: test-results
